<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Submission2</string>
    <string name="title_favorite">Favorite</string>
    <string name="popular">Popular</string>
    <string name="now_playing">Now Playing</string>
    <string name="top_rated">Top Rated</string>
    <string name="upcoming">Upcoming</string>
    <string name="search_here">Search Here</string>
    <string name="tagline">Tagline</string>
    <string name="runtime">Runtime</string>
    <string name="genre">Genre</string>
    <string name="recommendations">Recommendations</string>
    <string name="similar">Similar</string>
    <string name="back">Back</string>
    <string name="date">Date</string>
    <string name="exit">Press back again to exit</string>
    <string name="add_to_favorite">add to favorite</string>
    <string name="remove_to_favorite">remove to favorite</string>
    <string name="home">Home</string>
    <string name="minutes" tools:ignore="PluralsCandidate">%1$d minutes</string>
</resources>