<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragment.home.HomeFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8dp"
            android:layout_marginVertical="8dp"
            android:orientation="horizontal">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilSearch"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="?attr/actionBarSize"
                android:layout_marginEnd="16dp"
                android:layout_weight="1"
                android:hint="@string/search_here"
                android:textColorHint="@color/black60"
                app:boxCornerRadiusBottomEnd="32dp"
                app:boxCornerRadiusBottomStart="32dp"
                app:boxCornerRadiusTopEnd="32dp"
                app:boxCornerRadiusTopStart="32dp"
                app:boxStrokeColor="@color/black87"
                app:boxStrokeWidth="1dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tietSearch"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:maxLines="1"
                    android:textColor="@color/black87" />

            </com.google.android.material.textfield.TextInputLayout>

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                app:cardCornerRadius="32dp">

                <ImageButton
                    android:id="@+id/btnSearch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/black87"
                    android:padding="16dp"
                    android:contentDescription="@string/search_here"
                    android:src="@drawable/ic_baseline_search_white" />

            </androidx.cardview.widget.CardView>

        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvSearch"
            android:layout_width="match_parent"
            android:layout_height="420dp"
            android:orientation="horizontal"
            android:layout_marginVertical="8dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:listitem="@layout/item_list_movie"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/popular"
            android:textSize="18sp"
            android:textColor="@color/black87"
            android:textStyle="bold"
            android:layout_marginHorizontal="8dp"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvPopular"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:orientation="horizontal"
            android:layout_marginVertical="8dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:listitem="@layout/item_list_poster"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/now_playing"
            android:textSize="18sp"
            android:textColor="@color/black87"
            android:textStyle="bold"
            android:layout_marginHorizontal="8dp" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvNowPlaying"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:orientation="horizontal"
            android:layout_marginVertical="8dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:listitem="@layout/item_list_poster"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/top_rated"
            android:textSize="18sp"
            android:textColor="@color/black87"
            android:textStyle="bold"
            android:layout_marginHorizontal="8dp" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvTopRated"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:orientation="horizontal"
            android:layout_marginVertical="8dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:listitem="@layout/item_list_poster"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/upcoming"
            android:textSize="18sp"
            android:textColor="@color/black87"
            android:textStyle="bold"
            android:layout_marginHorizontal="8dp" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvUpcoming"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:orientation="horizontal"
            android:layout_marginVertical="8dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:listitem="@layout/item_list_poster"/>

    </LinearLayout>

</ScrollView>